--- a/backend/fixtures/index.html
+++ b/backend/fixtures/index.html
@@ -79,6 +79,10 @@
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.fixtures.rancher_api_client" href="rancher_api_client.html">harvester_e2e_tests.fixtures.rancher_api_client</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.fixtures.session" href="session.html">harvester_e2e_tests.fixtures.session</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -137,6 +141,7 @@
 <li><code><a title="harvester_e2e_tests.fixtures.images" href="images.html">harvester_e2e_tests.fixtures.images</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.keypair" href="keypair.html">harvester_e2e_tests.fixtures.keypair</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.network" href="network.html">harvester_e2e_tests.fixtures.network</a></code></li>
+<li><code><a title="harvester_e2e_tests.fixtures.rancher_api_client" href="rancher_api_client.html">harvester_e2e_tests.fixtures.rancher_api_client</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.session" href="session.html">harvester_e2e_tests.fixtures.session</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.support_bundle" href="support_bundle.html">harvester_e2e_tests.fixtures.support_bundle</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.user" href="user.html">harvester_e2e_tests.fixtures.user</a></code></li>
