Update testing docs
Signed-off-by: irishgordo <irishgordo@users.noreply.github.com>

--- a/backend/fixtures/api_client.html
+++ b/backend/fixtures/api_client.html
@@ -90,7 +90,7 @@ def unique_name():
     return datetime.now().strftime(&#34;%m-%d-%Hh%Mm%Ss%f&#34;)
 
 
-@pytest.fixture(scope=&#34;class&#34;)
+@pytest.fixture(scope=&#34;module&#34;)
 def ssh_keypair():
     private_key = asymmetric.rsa.generate_private_key(
         public_exponent=65537,
@@ -212,17 +212,28 @@ def host_shell(request):
         def client(self):
             return self._client
 
-        def login(self, ipaddr, port=22, jumphost=False, **kwargs):
-            if not self.client:
+        def reconnect(self, ipaddr, port=22, **kwargs):
+            if self.client:
+                self.client.close()
                 self._client = cli = SSHClient()
                 cli.set_missing_host_key_policy(MissingHostKeyPolicy())
                 kws = dict(username=self.username, password=self.password, pkey=self.pkey)
                 kws.update(kwargs)
                 cli.connect(ipaddr, port, **kws)
 
+        def login(self, ipaddr, port=22, jumphost=False, **kwargs):
+            if not self.client:
+                cli = SSHClient()
+                cli.set_missing_host_key_policy(MissingHostKeyPolicy())
+                kws = dict(username=self.username, password=self.password, pkey=self.pkey)
+                kws.update(kwargs)
+                cli.connect(ipaddr, port, **kws)
+                self._client = cli
+
                 if jumphost:
                     self.jumphost_policy()
                     self._jump = True
+                    self.reconnect(ipaddr, port, **kws)
 
             return self
 
@@ -374,17 +385,28 @@ def host_shell(request):
         def client(self):
             return self._client
 
-        def login(self, ipaddr, port=22, jumphost=False, **kwargs):
-            if not self.client:
+        def reconnect(self, ipaddr, port=22, **kwargs):
+            if self.client:
+                self.client.close()
                 self._client = cli = SSHClient()
                 cli.set_missing_host_key_policy(MissingHostKeyPolicy())
                 kws = dict(username=self.username, password=self.password, pkey=self.pkey)
                 kws.update(kwargs)
                 cli.connect(ipaddr, port, **kws)
 
+        def login(self, ipaddr, port=22, jumphost=False, **kwargs):
+            if not self.client:
+                cli = SSHClient()
+                cli.set_missing_host_key_policy(MissingHostKeyPolicy())
+                kws = dict(username=self.username, password=self.password, pkey=self.pkey)
+                kws.update(kwargs)
+                cli.connect(ipaddr, port, **kws)
+                self._client = cli
+
                 if jumphost:
                     self.jumphost_policy()
                     self._jump = True
+                    self.reconnect(ipaddr, port, **kws)
 
             return self
 
@@ -508,7 +530,7 @@ def skip_version_before(request, api_client):
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.fixture(scope=&#34;class&#34;)
+<pre><code class="python">@pytest.fixture(scope=&#34;module&#34;)
 def ssh_keypair():
     private_key = asymmetric.rsa.generate_private_key(
         public_exponent=65537,
