--- a/backend/fixtures/virtualmachines.html
+++ b/backend/fixtures/virtualmachines.html
@@ -69,11 +69,14 @@ def vm_shell():
                 if self.pkey:
                     pkey = RSAKey.from_private_key(StringIO(self.pkey))
 
-                self._client = cli = SSHClient()
+                cli = SSHClient()
                 cli.set_missing_host_key_policy(MissingHostKeyPolicy())
                 kws = dict(username=self.username, password=self.password, pkey=pkey, sock=ch)
                 kws.update(kwargs)
                 cli.connect(ipaddr, port, **kws)
+
+                self._client = cli
+
             return self
 
         def close(self):
@@ -141,11 +144,14 @@ def vm_shell():
                 if self.pkey:
                     pkey = RSAKey.from_private_key(StringIO(self.pkey))
 
-                self._client = cli = SSHClient()
+                cli = SSHClient()
                 cli.set_missing_host_key_policy(MissingHostKeyPolicy())
                 kws = dict(username=self.username, password=self.password, pkey=pkey, sock=ch)
                 kws.update(kwargs)
                 cli.connect(ipaddr, port, **kws)
+
+                self._client = cli
+
             return self
 
         def close(self):
