Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/conftest.html
+++ b/backend/conftest.html
@@ -297,6 +297,7 @@ def pytest_configure(config):
         (&#39;images&#39;, (&#34;{_r} image tests&#34;)),
         (&#34;networks&#34;, (&#34;{_r} vlan network tests&#34;)),
         (&#34;volumes&#34;, (&#34;{_r} volume tests&#34;)),
+        (&#34;virtualmachines&#34;, (&#34;{_r} VM tests&#34;)),
         (&#34;templates&#34;, (&#34;{_r} VM template tests&#34;)),
         (&#34;support_bundle&#34;, (&#34;{_r} Support Bundle tests&#34;)),
         (&#34;settings&#34;, (&#34;{_r} settings tests&#34;)),
@@ -699,6 +700,7 @@ def pytest_collection_modifyitems(config, items):
         (&#39;images&#39;, (&#34;{_r} image tests&#34;)),
         (&#34;networks&#34;, (&#34;{_r} vlan network tests&#34;)),
         (&#34;volumes&#34;, (&#34;{_r} volume tests&#34;)),
+        (&#34;virtualmachines&#34;, (&#34;{_r} VM tests&#34;)),
         (&#34;templates&#34;, (&#34;{_r} VM template tests&#34;)),
         (&#34;support_bundle&#34;, (&#34;{_r} Support Bundle tests&#34;)),
         (&#34;settings&#34;, (&#34;{_r} settings tests&#34;)),
