--- a/backend/integration/test_terraform.html
+++ b/backend/integration/test_terraform.html
@@ -62,6 +62,7 @@ def test_create_images_using_terraform(admin_session, image_using_terraform):
     pass
 
 
+@pytest.mark.skip(&#34;get_vlan API removed&#34;)
 @pytest.mark.terraform_provider_p1
 @pytest.mark.p1
 @pytest.mark.terraform
@@ -191,7 +192,8 @@ kube config</p></div>
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.terraform_provider_p1
+<pre><code class="python">@pytest.mark.skip(&#34;get_vlan API removed&#34;)
+@pytest.mark.terraform_provider_p1
 @pytest.mark.p1
 @pytest.mark.terraform
 @pytest.mark.public_network
